<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"

	android:gravity="center_horizontal"
	android:orientation="vertical"

	tools:context="com.tytosoft.delivery.KorzinaActivity"
	android:weightSum="10"
	>
	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay"

		>
	<android.support.v7.widget.Toolbar
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="?attr/actionBarSize"
		android:background="?attr/colorPrimary"

		app:popupTheme="@style/AppTheme.PopupOverlay">


	</android.support.v7.widget.Toolbar>
</android.support.design.widget.AppBarLayout>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="10"
		android:paddingStart="4dp"
		android:paddingEnd="4dp"
		>

		<TextView
			android:id="@+id/name"
			style="@style/item_product_text"
			android:layout_width="0dp"
			android:layout_weight="6"

			android:text="@string/tableName"/>

		<TextView
			android:id="@+id/tableCount"
			style="@style/item_product_text"

			android:layout_width="0dp"
			android:layout_weight="2"
			android:gravity="center_horizontal"
			android:text="@string/amount"
			/>


		<TextView
			android:id="@+id/tablePrice"
			style="@style/item_product_text"
			android:layout_width="0dp"

			android:layout_weight="2"

			android:gravity="end"
			android:text="@string/price"

			/>

	</LinearLayout>

	<android.support.v7.widget.RecyclerView
		android:id="@+id/list"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="10"
		tools:listitem="@layout/item_ticket_product_button"
		/>

	<include layout="@layout/layout_dostavka_status"/>
	<android.support.v7.widget.AppCompatButton
		android:id="@+id/createZakazBtn"
		style="@style/WhiteButton"
		android:textColor="@color/white"

		android:layout_width="320dp"
		android:layout_height="wrap_content"
		android:drawableStart="@drawable/button_zakaz_white"


		android:text="@string/createZakaz"


		/>
</LinearLayout>
