<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="wrap_content"
			  android:orientation="vertical"
			  android:layout_marginTop="4dp"
			  android:layout_marginBottom="4dp"

	>

	<TextView
		android:id="@+id/statusDate"
		style="@style/item_product_text"
		android:layout_width="match_parent"
		android:textSize="14sp"
		android:paddingLeft="@dimen/mainPadding"
		android:paddingRight="@dimen/mainPadding"
		tools:text="08.09.16, 19:01"/>
	<View
		android:layout_width="match_parent"
		android:layout_height="3dp"
		android:layout_marginLeft="@dimen/mainPadding"
		android:layout_marginRight="@dimen/mainPadding"
		android:background="@drawable/dash_divider"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:padding="@dimen/mainPadding"
		>

		<TextView
			android:id="@+id/statusName"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:gravity="center_vertical"
			android:text="@string/ticketZakazStatus"
			android:textSize="14sp"

			/>

		<TextView
			android:id="@+id/statusText"
			android:layout_width="match_parent"

			android:layout_height="wrap_content"
			android:layout_alignParentEnd="true"
			android:layout_marginStart="@dimen/mainPadding"
			android:gravity="end"
			android:textSize="14sp"
			tools:text="Ожидайте звонка оператора"
			android:textColor="@color/orderStatus"
			android:layout_toEndOf="@+id/statusName"/>
	</RelativeLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@drawable/divider"
		/>

	<LinearLayout
		android:id="@+id/productLList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		/>

	<TextView
		android:id="@+id/address"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingTop="4dp"
		tools:text="Otsuda navernoe k nam privezut"
		/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="10"
		>

		<TextView
			android:id="@+id/dostavkaName"
			android:layout_width="0dp"
			android:layout_weight="8"
			android:paddingTop="4dp"
			android:text="@string/dostavka"
			style="@style/item_product_text"
			/>

		<TextView
			android:id="@+id/dostavkaPrice"
			android:layout_width="0dp"
			android:layout_weight="2"
			android:gravity="end"
			tools:text="200 H"
			style="@style/item_product_text"
			/>
	</LinearLayout>
	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@drawable/divider"
		/>
	<TextView
		android:id="@+id/summa"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:textSize="16sp"
		tools:text="1060 h"
		android:textStyle="bold"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="4dp"

		/>
	<android.support.v7.widget.AppCompatButton
		android:id="@+id/retryBtn"
		style="@style/BorderButton"
		android:layout_width="wrap_content"
		android:minWidth="155dp"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:drawableLeft="@drawable/button_zakaz"
		android:drawablePadding="8dp"
		android:text="@string/RetryZakaz"
		android:layout_marginBottom="38dp"

		/>
</LinearLayout>